<resources>
   <!-- <string name="app_name">com.demo.jiayou</string>-->

    <string name="dialog_distance_title">ѡΧ</string>
    <string name="kilometre_3">3km</string>
    <string name="kilometre_5">5km</string>
    <string name="kilometre_8">8km</string>
    <string name="kilometre_10">10km</string>
    <string name="station_price">加油站油价</string>
    <string name="province_price">今日油价</string>
    <string name="text_load">ڻȡվϢ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_tips">άͼƬ׼ɨ򼴿Զɨ</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="car_input_filter">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="car_input_filter1">0123456789abcdefghijklmnopqrstuvwxyz-ABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="car_input_filter2">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="car_input_filter4">0123456789abcdeX</string>

    <string name="title_today_weather">今日天气</string>
    <string name="login">登录</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="quickRegister">快速注册</string>
    <string name="fogetPasswordQ">忘记密码</string>
    <string name="fogetPassword">忘记密码</string>
    <string name="wxLogin">微信登录</string>
 <string name="app_name">加油包</string>
    <string name="qqLogin">QQ登录</string>
    <string name="register">注册</string>
    <string name="alertPhone">输入手机</string>
    <string name="alertCode">输入验证</string>
    <string name="alertPassword">输入密码</string>
    <string name="alertPasswordOk">确认密码</string>
    <string name="getCode">获取验证码</string>
    <string name="protocol">点击注册即代表您同意《软件许可与服务协议》</string>
    <string name="alertNewPassword">输入新密码</string>
    <string name="alertNewPasswordOk">确认新密码</string>
    <string name="resetPassword">重置密码</string>
    <string name="myAccount">我的账户</string>
    <string name="myCar">我的车辆</string>
    <string name="myOrder">我的订单</string>
    <string name="recommend">推荐车助手给好友</string>
    <string name="contactUs">联系我们</string>
    <string name="userProcotol">用户协议</string>
    <string name="qa">使用帮助</string>
    <string name="myInfo">个人资料</string>
    <string name="myHead">头像</string>
    <string name="mySex">性别</string>
    <string name="alertSex">选择您的性别</string>
    <string name="myArea">所在地</string>
    <string name="logout">退出当前帐户</string>
    <string name="updatePhone">修改手机</string>
    <string name="updatePassword">修改密码</string>
    <string name="alertOldPassword">输入旧密码</string>
    <string name="pushNotif">推送通知</string>
    <string name="numWeixin">微信公众平台</string>
    <string name="hotline">客服热线</string>
    <string name="scan">扫一</string>
    <string name="serverNumber">15195919171</string>
    <string name="cityLocation">选择城市</string>
    <string name="chooseCity">已选城</string>
    <string name="locationCity">当前城市</string>
    <string name="locationing">正在定位</string>
    <string name="shanghai">上海</string>
    <string name="addCar">添加车辆</string>
    <string name="addCarDesc">添加车辆, 一秒查违章</string>
    <string name="car_type">车辆类型</string>
    <string name="car_city">查询城市</string>
    <string name="car_number">车牌号码</string>
    <string name="car_engine">发动机号</string>
    <string name="car_frame">　车架</string>
    <string name="car_remark">　　备注</string>
    <string name="alertNumber">请输入车牌号</string>
    <string name="alertCarNumber">请输入发动机</string>
    <string name="alertCarFrame">请输入车架号</string>
    <string name="alertCarRemark">选填</string>
    <string name="cwz_detail_undo">未处</string>
    <string name="cwz_detail_undoValue">0</string>
    <string name="cwz_detail_fine">罚款</string>
    <string name="cwz_detail_fineValue">0</string>
    <string name="cwz_detail_deduct">扣分</string>
    <string name="cwz_detail_deductValue">0</string>
    <string name="cwz_detail_updatetime_desc">数据更新时间</string>
    <string name="cwz_detail_item_ordernumber">违章单号</string>
    <string name="gfd_g">高发</string>
    <string name="gfd_h">多发</string>
    <string name="gfd_l">低发</string>
    <string name="gfd_alertLocation">正在定位</string>
    <string name="gfd_alertNetwork">正在获取数据</string>
    <string name="gfd_alertLocationError">定位失败,点此重试</string>
    <string name="gfd_alertNetworkError">获取数据失败,点此重试</string>
    <string name="gfd_alertDetailState">暂无信息</string>
    <string name="gfd_mylocation">我的位置</string>
    <string name="gfd_risk">危险指数:</string>
    <string name="gfd_detail">违章详情</string>
    <string name="gfd_detail_type">违章类别</string>
    <string name="cxjsq">车险计算</string>
    <string name="xs_city">行驶城市</string>
    <string name="chouche_price">购车价格</string>
    <string name="chouche_time">购车时间</string>
    <string name="baoxian_gov">保险公司</string>
    <string name="mobilephone1">　手机号码</string>
    <string name="mobilephone">手机号码</string>
    <string name="alertbaoxian_gov">请输入保险公</string>
    <string name="alertmobilephone">请输入手机号</string>
    <string name="xzbxgs">选择保险公司</string>
    <string name="alertchoucheprice">请输入购车价</string>
    <string name="alertchouchetime">请输入购车时</string>
    <string name="submitsuccess">提交成功</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="jryj">今日油价</string>
    <string name="fkdj">罚款代缴</string>
    <string name="pay_fine">去缴罚款</string>
    <string name="wz_danhao">违章单号</string>
    <string name="alert_wz_danhao">请输入违章单</string>
    <string name="nofineinfo">没有违章信息</string>
    <string name="nofinedetailinfo">目前没有违章记录</string>
    <string name="cwz_fee">罚款</string>
    <string name="cwz_deduct_points">扣分</string>
    <string name="cwz_detail_pay">立即缴费</string>
    <string name="cwz_pay_phoneAlert">请填写您的手机号</string>
    <string name="cwz_pay_phone_title">联系手机　</string>
    <string name="cwz_pay_fine_title">已选择违章</string>
    <string name="cwz_pay_fine_money_title">罚款金额　</string>
    <string name="cwz_pay_fine_ordermoney_title">订单金额　</string>
    <string name="cwz_pay_fine_serviceMoney_title">服务费　　</string>
    <string name="cwz_pay_desc_title">注意事项:</string>
    <string name="cwz_pay_desc_1">1.扣分，含滞纳金的罚单无法通过平台缴费</string>
    <string name="cwz_pay_desc_2">2.异地违章处理网络较慢，如有问题请先联系客服，否则因重复缴费造成的损失将由您自行承担</string>
    <string name="cwz_pay_title">在线缴费</string>
    <string name="cwz_pay_orderMoney">订单金额</string>
    <string name="cwz_pay_orderSubmit">提交订单</string>
    <string name="cwz_pay_step1">提交订单</string>
    <string name="cwz_pay_step2">在线支付</string>
    <string name="cwz_pay_step3">等待处理</string>
    <string name="order_detail">订单详情</string>
    <string name="fineFee">罚款金额</string>
    <string name="delayFee">滞纳</string>
    <string name="serviceFee">服务</string>
    <string name="serviceProject">服务项目</string>
    <string name="illegalPlace">违章地点</string>
    <string name="illegalNo">违章单号</string>
    <string name="serviceProviders">服务</string>
    <string name="contactNumber">联系电话</string>
    <string name="fineActCapture">罚款代缴</string>
    <string name="selectorder">选择支付方式</string>
    <string name="orderPrice">订单金额</string>
    <string name="weixinpay">微信支付</string>
    <string name="zhifubaopay">支付宝支</string>
    <string name="oialcardrecharge">加油卡充</string>
    <string name="cpcc">中国石化</string>
    <string name="co">中国石油</string>
    <string name="oilcard">　加油卡号</string>
    <string name="cardholdername">持卡人姓</string>
    <string name="selectfacevalues">　选择面</string>
    <string name="salevalue">　　　售价</string>
    <string name="alertoilcard">请输入加油卡</string>
    <string name="alertcardholdername">请输入持卡人姓名</string>
    <string name="recharge">立即充</string>
    <string name="orderprice">订单金额</string>
    <string name="oilcardrecharge">油卡充</string>
    <string name="oilcardtype">加油卡类</string>
    <string name="oilcardno">加油卡号</string>
    <string name="submitorder">提交订单</string>
    <string name="index">首页</string>
    <string name="box_active">百宝</string>
    <string name="news_normal">车资</string>
    <string name="myaccount">我的账户</string>
    <string name="box_ershou">二手车交</string>
    <string name="box_libra">二手车估</string>
    <string name="zaixianjiaofei">在线缴费</string>
    <string name="order_info">订单信息</string>
    <string name="submit_time">提交时间</string>
    <string name="car_sppraisal">估车</string>
    <string name="historical_record">历史记录</string>
    <string name="alertCarDesc">请输入车辆信</string>
    <string name="carstylename">车型名称</string>
    <string name="city">所在城</string>
    <string name="firstregistration">首次上牌</string>
    <string name="mileage">行驶里程</string>
    <string name="alertcarstylename">请输入车型名</string>
    <string name="selectcity">请选择所在城</string>
    <string name="selecttime">请选择时间</string>
    <string name="alertmileage">请输入里</string>
    <string name="wangongli">万公</string>
    <string name="buttonguji">立即估价</string>
    <string name="gujiadetail">估价详情</string>
    <string name="carnews">车资</string>
    <string name="park">停车</string>
    <string name="foursshop">4S</string>
    <string name="carmaintenance">汽车保养</string>
    <string name="carrepair">汽车维修</string>
    <string name="washcar">洗车</string>
    <string name="caraccessories">汽车配件</string>
    <string name="delete_all">清空全部</string>
    <string name="delete_select">删除</string>
    <string name="free_travel_insurance">免费出行保险</string>
    <string name="verification_code">　验证</string>
    <string name="alert_verification_code">请输入验证码</string>
    <string name="need_verification_code">获取验证</string>
    <string name="applicant_name">被保人名</string>
    <string name="alert_you_name">请输入你的姓</string>
    <string name="card_num">身份证号</string>
    <string name="alert_card_num">请输入你的身份证号码</string>
    <string name="location_city">所在城</string>
    <string name="birthday">出生日期</string>
    <string name="sex">　　性别</string>
    <string name="insurance_products">保险产品</string>
    <string name="insurance_name">保险名称</string>


</resources>
