<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar">
        <Button
            android:id="@+id/iv_back"
            android:layout_width="50.0dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/csy_arr_back"
            android:drawablePadding="5.0dip"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="14.0sp"
            android:text="返回"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="密码修改"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff5f5f5"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="30.0dip"
    android:paddingLeft="20.0dip"
    android:paddingRight="20.0dip"
    android:paddingTop="30.0dip">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/PasLin"
    android:orientation="vertical">

    <LinearLayout
        android:id="@id/ll_oldPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_input_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@id/oldPassword"
            style="@style/input_style2"
            android:hint="@string/alertOldPassword"
            android:inputType="textPassword"
            android:maxLength="20" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/ll_newPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_oldPassword"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/account_input_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@id/newPassword"
            style="@style/input_style2"
            android:hint="@string/alertNewPassword"
            android:inputType="textPassword"
            android:maxLength="20" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/ll_newPasswordOk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_newPassword"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/account_input_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@id/newPasswordOk"
            style="@style/input_style2"
            android:hint="@string/alertNewPasswordOk"
            android:inputType="textPassword"
            android:maxLength="20" />
    </LinearLayout>
</LinearLayout>
    <Button
        android:id="@id/user_update"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@drawable/bg_login_button"
        android:text="确认修改"
        android:textColor="#ffffffff"
        android:layout_below="@+id/PasLin"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp" />
</RelativeLayout>
</LinearLayout>