<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <Toolbar
        style="@style/Toolbar"
        android:id="@+id/toolbar"
        >
        <Button
            android:id="@+id/iv_back"
            android:layout_width="50.0dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/csy_arr_back"
            android:drawablePadding="5.0dip"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="14.0sp"
            android:text="返回"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="加油站列表"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal" />
    </Toolbar>
<ScrollView
    android:layout_below="@+id/toolbar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="none"
    android:overScrollMode="never"
    android:background="@color/white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80.0dip"
                android:layout_height="80.0dip"
                android:background="@drawable/zenconspencil" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="18.0sp" />

            <TextView
                android:id="@id/tv_version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="版本 V2.1.1"
                android:textSize="12.0sp" />
        </LinearLayout>

        <View
            style="@style/navigation_line_style"
            android:layout_marginTop="30.0dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="12.0dip"
                android:layout_weight="1.0"
                android:text="客服邮箱"
                android:textSize="13.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:text="c_87564512@sina.com"
                android:textColor="#ff04a1fe"
                android:textSize="13.0sp" />
        </LinearLayout>

        <View style="@style/navigation_line_style" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="12.0dip"
                android:layout_weight="1.0"
                android:text="@string/hotline"
                android:textSize="13.0sp" />

            <TextView
                android:id="@id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:text="@string/serverNumber"
                android:textColor="#ff04a1fe"
                android:textSize="13.0sp" />
        </LinearLayout>

        <View style="@style/navigation_line_style" />

        <ImageView
            android:layout_width="140.0dip"
            android:layout_height="140.0dip"
            android:layout_marginTop="20.0dip"
            android:src="@drawable/mmqrcode1465460776042" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:gravity="center_horizontal"
            android:text="扫一扫"
            android:textColor="#ff373737"
            android:textSize="14.0sp" />
    </LinearLayout>
</ScrollView>
</RelativeLayout>